-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.0
-
None
-
-
d83b53506 (dev), 5f4c74f04 (6.7), 65677d851 (6.6), abc1e6107 (tqtc/lts-6.5)
*This may apply to different versions of the document. Please check and fix them accordingly.
document link : https://doc.qt.io/qt-6/qsurfaceformat.html#setDefaultFormat
I think "settings" here is meant to be "setting"
For Gerrit Dashboard: QTBUG-107486 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
543197,2 | Doc: Fix typo in QSurfaceFormat::setDefaultFormat documentation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
543715,2 | Doc: Fix typo in QSurfaceFormat::setDefaultFormat documentation | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
543776,2 | Doc: Fix typo in QSurfaceFormat::setDefaultFormat documentation | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
543913,2 | Doc: Fix typo in QSurfaceFormat::setDefaultFormat documentation | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |