Doc: Fix typo in QSurfaceFormat::setDefaultFormat documentation

Fixes: QTBUG-107486
Pick-to: 6.5
Change-Id: Id22cedfa65e831574f683a33a4c2fde20570890e
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit d83b5350689242e7815a2c2e6b6168fe1f67d943)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 5f4c74f0456714f13a0717724e427d37e9f7fec9)